--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ button#audio-btn:hover {
   left: 0;
   width: 200%;
   height: 200%;
-  background: url('https://i.ibb.co/ZYW3VTp/galaxy-stars.gif');
+  background: url('https://64.media.tumblr.com/c1620877dbdd92665e3f1cc36f49089b/464228ce7c4e8f9a-a1/s540x810/c6b82a9a3c89d719c0397cb453e8df0a96ab5b80.gifv');
   background-size: cover;
   animation: moveStars 80s linear infinite;
 }
