--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,11 @@ button#audio-btn:hover {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   background: url('g.gif');
   background-size: cover;
-  
+  animation: moveStars 10s linear infinite;
 }
 
 @keyframes fadeIn {
